deploy: fdaaa54a086ddfb42f07478042e0834b0f12e987

--- a/chat_page/chat.html
+++ b/chat_page/chat.html
@@ -6,9 +6,9 @@
     <title>Чат</title>
     <link rel="icon" href="../assets/message-Ccfd3PTE.png"/>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <script type="module" crossorigin src="../assets/chat-D15uZ3I-.js"></script>
-  <link rel="modulepreload" crossorigin href="../assets/chats-3Lt7tHit.js">
-  <link rel="modulepreload" crossorigin href="../assets/utils-YGOX322K.js">
+  <script type="module" crossorigin src="../assets/chat-9xKKEGBH.js"></script>
+  <link rel="modulepreload" crossorigin href="../assets/chats_init-D5Bk5HmF.js">
+  <link rel="modulepreload" crossorigin href="../assets/utils-BX93cMPL.js">
   <link rel="stylesheet" crossorigin href="../assets/chat-DnmW7AVs.css">
 </head>
 <body class="chat-body">
