--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Вход</title>
     <link rel="icon" href="./assets/message-Ccfd3PTE.png"/>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <script type="module" crossorigin src="./assets/main-BNa562V_.js"></script>
-  <link rel="modulepreload" crossorigin href="./assets/chats-3Lt7tHit.js">
+  <script type="module" crossorigin src="./assets/main-B0AMMrC_.js"></script>
+  <link rel="modulepreload" crossorigin href="./assets/chats_init-D5Bk5HmF.js">
   <link rel="stylesheet" crossorigin href="./assets/main-CFtq4jAb.css">
 </head>
 <body class="login-body">
