--- a/messages_page/messenger.html
+++ b/messages_page/messenger.html
@@ -6,9 +6,9 @@
     <title>Сообщения</title>
     <link rel="icon" href="../assets/message-Ccfd3PTE.png"/>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <script type="module" crossorigin src="../assets/messenger-CRmKozpN.js"></script>
-  <link rel="modulepreload" crossorigin href="../assets/chats-3Lt7tHit.js">
-  <link rel="modulepreload" crossorigin href="../assets/utils-YGOX322K.js">
+  <script type="module" crossorigin src="../assets/messenger-gFiumVjp.js"></script>
+  <link rel="modulepreload" crossorigin href="../assets/chats_init-D5Bk5HmF.js">
+  <link rel="modulepreload" crossorigin href="../assets/utils-BX93cMPL.js">
   <link rel="stylesheet" crossorigin href="../assets/messenger-CtttFKYn.css">
 </head>
 <body class="messenger-body">
