deploy: 744999d1cf0fb62c2977336bdb3ead955690123b

--- a/chat_page/chat.html
+++ b/chat_page/chat.html
@@ -6,9 +6,9 @@
     <title>Чат</title>
     <link rel="icon" href="../assets/message-Ccfd3PTE.png"/>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <script type="module" crossorigin src="../assets/chat-DLi9KSyw.js"></script>
-  <link rel="modulepreload" crossorigin href="../assets/chats_init-D5Bk5HmF.js">
-  <link rel="modulepreload" crossorigin href="../assets/utils-BSdJjFwl.js">
+  <script type="module" crossorigin src="../assets/chat-C2LJ1ip_.js"></script>
+  <link rel="modulepreload" crossorigin href="../assets/chats-bC-h7T0w.js">
+  <link rel="modulepreload" crossorigin href="../assets/utils-CFhqYgD1.js">
   <link rel="stylesheet" crossorigin href="../assets/chat-DnmW7AVs.css">
 </head>
 <body class="chat-body">
