--- a/messages_page/messenger.html
+++ b/messages_page/messenger.html
@@ -6,9 +6,9 @@
     <title>Сообщения</title>
     <link rel="icon" href="../assets/message-Ccfd3PTE.png"/>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <script type="module" crossorigin src="../assets/messenger-jLc1aMUZ.js"></script>
-  <link rel="modulepreload" crossorigin href="../assets/chats-bC-h7T0w.js">
-  <link rel="modulepreload" crossorigin href="../assets/utils-CFhqYgD1.js">
+  <script type="module" crossorigin src="../assets/messenger-hzRabMJ4.js"></script>
+  <link rel="modulepreload" crossorigin href="../assets/chats-kHMLDPK4.js">
+  <link rel="modulepreload" crossorigin href="../assets/utils-BuyREcAV.js">
   <link rel="stylesheet" crossorigin href="../assets/messenger-CtttFKYn.css">
 </head>
 <body class="messenger-body">
